<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Characteristics</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="density_label">Pixel Denisty:</string>
    <string name="size_label">Size:</string>
    <string name="actual_label">Dimensions:</string>
    <string name="density_factor_label">Density factor:</string>
    <string name="device_pixels_label">DP Dimensions:</string>
    
</resources>